# ColiSphericus

./: .gitattributes  .gitignore  Cargo.toml  README.md  build  index.html  plot  plot.gnuplot
data/: data-t1-v15.csv  data-v0.1-t15-3d-wait.csv  data-v0.1-t15-3d.csv  data-v0.1-t15-deriv.csv  data-v0.1-t15.csv  data-v0.1-t20-3d.csv  data-v0.1-t30-3d.csv  data-v0.1-t5-wait.csv  data-v0.3-t15.csv  data-v0.5-t15.csv  data-v1-t15-3d-distrib.csv  data-v1-t15-3d-hungry-3.csv  data-v1-t15-3d-hungry-5.csv  data-v1-t15-3d-hungry-7.csv  data-v1-t15-hungry.csv  data-v1-t15-smooth.csv  data-v1-t15.csv  data-v1-t5-wait.csv  data-v2-t15.csv  data-v5-t15-3d.csv  data-v5-t15.csv  data-v5-t5-wait.csv  data.csv
src/: circle.rs  consts.rs  lib.rs
wasm/: README.md  package.json  wasm.js  wasm_bg.wasm
web/: index.js  paramlist.js  style.css
web/wasm/: wasm.js  wasm_bg.wasm
