[package]
name = "coli_sphericus"
version = "0.1.0"
edition = "2021"
description = """
Задача №4 "Бактерія звичайна кругова"
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]