[package]
name = "coli_sphericus"
version = "0.1.0"
edition = "2021"
description = """
Задача №4 "Бактерія звичайна кругова"
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] } # For rand to work on wasm
rand = "0.8.5"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]